testing 1px blank border on mobile fix

--- a/test/stylate.css
+++ b/test/stylate.css
@@ -235,7 +235,7 @@ body, html
 	position: fixed;
 	z-index: -2;
 	margin: 0;
-	padding: 0;
+	padding: 100px;
 	min-height:100vh;
 	min-width: 100vw;
 	background-attachment: fixed;
